# CPP_Learning

./: .gitignore  README.md  Ref.md
CPP_Project/: CPP_Project.sln
CPP_Project/Advance_Cpp/: Logic_Constness_and_Bitwise_Constness.cpp  const_and_function.cpp
CPP_Project/Algorithm_in_CPP/: Greed_Fractional_Knapsack.cpp
CPP_Project/Boost/: Boost Library 1-  Lexical Cast.cpp  Boost Library 2-  Variant.cpp  Boost Library 3- Any.cpp  Matrix_Multiplication_with_boost_thread.cpp
CPP_Project/CPP_Project/: CPP_Project.vcxproj  CPP_Project.vcxproj.filters
CPP_Project/CPP_Project/Advance_Cpp/: Understand_Rvalue_and_Lvalue.cpp  const.cpp
CPP_Project/CPP_Project/Algorithm_in_CPP/: Complete_Search_8_Queens.cpp
CPP_Project/CPP_Project/Concurrent_Programming/: Condition_Variable.cpp  Simple_Thread.cpp  Unique_lock_and_lazy_initialization.cpp
CPP_Project/CPP_Project/Learning_CPP/: dynamic_array(vector).cpp  shared_pointer.cpp  thread_create_manage.cpp  unique_pointer.cpp  vectorization.cpp
CPP_Project/Concurrent_Programming/: Future_Promise_and_async.cpp  Simple_Paraller_for_loop_fixing.cpp  dead_lock.cpp  matrix_multiplication_multithreads.cpp  packed_task.cpp
CPP_Project/Design_Pattern/: generic_singleton_pattern.cpp  generic_singleton_pattern.h
CPP_Project/FucntionPointer/: function_pointer.cpp
CPP_Project/Learning_CPP/: Q_sqrt.cpp  Uniform_Initialization.cpp  arrow_operator.cpp  class_example.cpp  classes_override.cpp  dynamic_casting.cpp  fast_input.cpp  fast_number_reader.cpp  object_lifetime_in_cpp.cpp  thread.cpp  timing_in_cpp.cpp
Code It Yourself Game/AugmentedReality/: Source.cpp
Code It Yourself Game/AugmentedReality/x64/Debug/: Project1.ilk  escapi.exp  escapi.ilk  escapi.lib
Code It Yourself Game/AugmentedReality/x64/Release/: Project1.iobj  Project1.ipdb  escapi.exp  escapi.iobj  escapi.ipdb  escapi.lib
Concurrency_in_Action_Book/: CMakeLists.txt  Readme.md
Concurrency_in_Action_Book/Chapter_1/: CMakeLists.txt  hello_world.cpp
Concurrency_in_Action_Book/Chapter_2/: multi_thread.cpp
Concurrency_in_Action_Book/Chapter_2 Managing threads/: CMakeLists.txt  Readme.md  example_1.cpp
Concurrency_in_Action_Book/Chapter_3 Sharing data between threads/: Readme.md
Concurrency_in_Action_Book/Chapter_3 Sharing data between threads/pass_value_class_thread/: CMakeLists.txt  multi_thread.cpp
Concurrency_in_Action_Book/Unorganized/: CMakeLists.txt  Readme.md  multi_thread.cpp  multi_thread_manual.cpp  multi_thread_safe.cpp
Modern C++ Challenge/: Readme.md
Modern C++ Challenge/Chapter_1/: CMakeLists.txt  Problem_1.cpp  Problem_2.cpp  Readme.md
Networks/: README.md
Networks/Simple_server_client/: CMakeLists.txt  main.cpp
Practical C++ Design/: Readme.md
SimpleQueue/: CMakeLists.txt  Readme.md  main.cpp
TBB_Practice/hello_world/: CmakeLists.txt  main.cpp
TBB_Pratice/: Readme.md
Tbb_Library/Chapter_1/: ch01.h  cmd  figure_1_04  figure_1_04.cpp  figure_1_04_class  figure_1_04_class.cpp  figure_1_05.cpp  figure_1_07  figure_1_07.cpp  figure_1_10  figure_1_10.cpp  figure_1_11  figure_1_11.cpp  lambda_express_1  lambda_express_1.cpp  lambda_express_2  lambda_express_2.cpp
Tbb_Library/Chapter_2/: cmd  figure_2_03  figure_2_03.cpp  figure_2_05  figure_2_05.cpp  figure_2_06  figure_2_06.cpp  figure_2_07  figure_2_07.cpp  figure_2_08  figure_2_08.cpp  lambda_vs_class_1  lambda_vs_class_1.cpp  lambda_vs_class_2  lambda_vs_class_2.cpp
Video_Game_Physics/: CMakeLists.txt  Readme.md
Video_Game_Physics/src/: main.cpp  rigid_body_simulation.cpp
